fix(preset-mini): remove grid-gap from generated CSS (deprecated in favor of gap), fix #2642 (#2872)

--- a/test/assets/output/preset-mini-targets.css
+++ b/test/assets/output/preset-mini-targets.css
@@ -614,16 +614,16 @@ unocss .scope-\[unocss\]\:block{display:block;}
 .grid-areas-\[prepend_content_append\]{grid-template-areas:"prepend content append";}
 .grid-areas-\[prepend_content_append\]-\[prepend_content_append\]{grid-template-areas:"prepend content append" "prepend content append";}
 .grid-areas-\$variable{grid-template-areas:var(--variable);}
-.gap-\$variable{grid-gap:var(--variable);gap:var(--variable);}
-.gap-4{grid-gap:1rem;gap:1rem;}
-.gap-inherit{grid-gap:inherit;gap:inherit;}
-.gap-none{grid-gap:0;gap:0;}
-.gap2{grid-gap:0.5rem;gap:0.5rem;}
-.-gap-y-5{grid-row-gap:-1.25rem;row-gap:-1.25rem;}
+.gap-\$variable{gap:var(--variable);}
+.gap-4{gap:1rem;}
+.gap-inherit{gap:inherit;}
+.gap-none{gap:0;}
+.gap2{gap:0.5rem;}
+.-gap-y-5{row-gap:-1.25rem;}
 .flex-gap-y-1,
-.grid-gap-y-1{grid-row-gap:0.25rem;row-gap:0.25rem;}
-.flex-gap-y-unset{grid-row-gap:unset;row-gap:unset;}
-.gap-x-1{grid-column-gap:0.25rem;column-gap:0.25rem;}
+.grid-gap-y-1{row-gap:0.25rem;}
+.flex-gap-y-unset{row-gap:unset;}
+.gap-x-1{column-gap:0.25rem;}
 .absolute{position:absolute;}
 .pos-fixed{position:fixed;}
 .position-sticky{position:sticky;}
